3scale/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: apicast-production
    namespace: 3scale
    resourceVersion: "491646519"
    uid: 4c0d15f3-9a21-4d9e-9bfa-27c2f435e483
  subsets:
  - addresses:
    - ip: 10.131.19.162
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: apicast-production-3-k2lvj
        namespace: 3scale
        resourceVersion: "491646516"
        uid: 7a4efaa7-82c7-4bd6-9e48-7faed5477b0a
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: gateway
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: apicast-staging
    namespace: 3scale
    resourceVersion: "491646500"
    uid: 16e9853b-74a8-4445-b48d-4cc8ab1348ec
  subsets:
  - addresses:
    - ip: 10.131.18.210
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: apicast-staging-1-6ccph
        namespace: 3scale
        resourceVersion: "491646498"
        uid: 2dec89ae-9aba-49d9-b077-9631e2d513a2
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: gateway
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: backend
      threescale_component_element: listener
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: backend-listener
    namespace: 3scale
    resourceVersion: "428583535"
    uid: 2a02bf72-f797-4958-aff4-6ac5f31f7c32
  subsets:
  - addresses:
    - ip: 10.130.22.34
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: backend-listener-1-wm9kh
        namespace: 3scale
        resourceVersion: "428583534"
        uid: cdf00a12-cf82-49aa-882c-78a955097ecb
    ports:
    - name: http
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: backend
      threescale_component_element: redis
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: backend-redis
    namespace: 3scale
    resourceVersion: "428583637"
    uid: 00eb061f-dc4d-4b27-815a-2c84dc796645
  subsets:
  - addresses:
    - ip: 10.130.22.40
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: backend-redis-1-rqqbh
        namespace: 3scale
        resourceVersion: "428583634"
        uid: 5f96357a-c303-4cb9-a3fb-6f1147f3db9e
    ports:
    - port: 6379
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: developer-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: system-developer
    namespace: 3scale
    resourceVersion: "491646476"
    uid: bba58b18-29a8-429c-bf92-404832486b48
  subsets:
  - addresses:
    - ip: 10.131.18.165
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: system-app-1-tzhsn
        namespace: 3scale
        resourceVersion: "491646474"
        uid: 5f177642-72b8-4ef1-8152-3a973fa9cc66
    ports:
    - name: http
      port: 3001
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: master-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: system-master
    namespace: 3scale
    resourceVersion: "491646477"
    uid: 75168bfa-276b-4d23-8622-1774f971b324
  subsets:
  - addresses:
    - ip: 10.131.18.165
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: system-app-1-tzhsn
        namespace: 3scale
        resourceVersion: "491646474"
        uid: 5f177642-72b8-4ef1-8152-3a973fa9cc66
    ports:
    - name: http
      port: 3002
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: memcache
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: system-memcache
    namespace: 3scale
    resourceVersion: "428583577"
    uid: bb8270cf-2499-4170-be00-2b47abeeb0e3
  subsets:
  - addresses:
    - ip: 10.130.22.35
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: system-memcache-1-rmbw9
        namespace: 3scale
        resourceVersion: "428583574"
        uid: aff7b529-81bb-4088-9451-646356345ae0
    ports:
    - name: memcache
      port: 11211
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: mysql
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: system-mysql
    namespace: 3scale
    resourceVersion: "428583657"
    uid: 2d93e60f-640e-48ab-84d4-16460fde6ae0
  subsets:
  - addresses:
    - ip: 10.130.22.42
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: system-mysql-1-5w2f8
        namespace: 3scale
        resourceVersion: "428583655"
        uid: 8cd2b635-a76f-4e6b-b7a0-1c43d303a591
    ports:
    - name: system-mysql
      port: 3306
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: provider-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: system-provider
    namespace: 3scale
    resourceVersion: "491646478"
    uid: 81aa2fce-5aa7-4cff-a3b3-a3372be1d13b
  subsets:
  - addresses:
    - ip: 10.131.18.165
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: system-app-1-tzhsn
        namespace: 3scale
        resourceVersion: "491646474"
        uid: 5f177642-72b8-4ef1-8152-3a973fa9cc66
    ports:
    - name: http
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: redis
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: system-redis
    namespace: 3scale
    resourceVersion: "428583519"
    uid: 004486a6-38b3-4543-a539-73987f2678d2
  subsets:
  - addresses:
    - ip: 10.130.22.41
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: system-redis-1-dkmvs
        namespace: 3scale
        resourceVersion: "428583515"
        uid: 65ab8f00-2182-461e-bd3f-5a3069dde435
    ports:
    - name: redis
      port: 6379
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: sphinx
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: system-sphinx
    namespace: 3scale
    resourceVersion: "428583546"
    uid: f77d71a7-75ca-457c-b7ba-26730baff496
  subsets:
  - addresses:
    - ip: 10.130.22.36
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: system-sphinx-1-v42v4
        namespace: 3scale
        resourceVersion: "428583544"
        uid: ec7c65a9-d607-4e1a-b789-ce6f49220156
    ports:
    - name: sphinx
      port: 9306
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: zync
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync
    namespace: 3scale
    resourceVersion: "428583585"
    uid: d00a8e12-e57f-4bb8-ba81-7d22ab220c80
  subsets:
  - addresses:
    - ip: 10.130.22.33
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: zync-1-qpk7c
        namespace: 3scale
        resourceVersion: "428583581"
        uid: f41508ec-8565-4ace-9d4b-22f10d6082f1
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-04T23:50:42Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: zync
      threescale_component_element: database
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-database
    namespace: 3scale
    resourceVersion: "428583570"
    uid: 0ef42288-5325-4ba9-a756-35caa5701fb8
  subsets:
  - addresses:
    - ip: 10.130.22.22
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: zync-database-1-qn8qg
        namespace: 3scale
        resourceVersion: "428583566"
        uid: 268e04a8-3312-4a89-9f04-f350612b5d0d
    ports:
    - name: postgresql
      port: 5432
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
