3scale/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:07:10Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: backend
      threescale_component_element: listener
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: backend
    namespace: 3scale
    resourceVersion: "94892325"
    uid: 8c4cbca4-21c5-4bc5-adb8-9c8e077f5169
  spec:
    host: backend-3scale.api-cloud.dirtrab.cl
    port:
      targetPort: http
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Allow
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: backend-listener
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:07:10Z"
        status: "True"
        type: Admitted
      host: backend-3scale.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:30:59Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: provider-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: prueba1
    namespace: 3scale
    resourceVersion: "94906189"
    uid: 9bb06aad-259a-4ea8-8ebe-aa1a90cb9916
  spec:
    host: prueba1-3scale.api-cloud.dirtrab.cl
    port:
      targetPort: http
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Allow
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: system-provider
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:30:59Z"
        status: "True"
        type: Admitted
      host: prueba1-3scale.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:35:49Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-2g4gw
    namespace: 3scale
    resourceVersion: "94909117"
    uid: ed9276f4-7bc8-4976-97fd-8b2c916f9b47
  spec:
    host: test1-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:35:49Z"
        status: "True"
        type: Admitted
      host: test1-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:40:28Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-4fqxn
    namespace: 3scale
    resourceVersion: "94911701"
    uid: 2056d13f-89c5-49ae-a1d6-0f81806cca0f
  spec:
    host: lre-services-stagging-prod.api.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAJLy5hrt7Truc+XSi/n97mcwDQYJKoZIhvcNAQELBQAw
[...]
        655JZ9QJJBjMJu/Yh4OJCXWhUGERGto=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAmDtA8UoGIfUp1zqz1tyTawc8+2BMCXG8E+7qe6R5KsGdb6Yu
[...]
        bWgrxYHvPhobw41zEhGif6YXMgUvkqVH7YXaoh9CEMzNz/3OEAOEug==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:40:28Z"
        message: a route in another namespace holds lre-services-stagging-prod.api.dirtrab.cl
          and is older than zync-3scale-api-4fqxn
        reason: HostAlreadyClaimed
        status: "False"
        type: Admitted
      host: lre-services-stagging-prod.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:58:08Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-58ncj
    namespace: 3scale
    resourceVersion: "94922047"
    uid: f4008a3e-223a-4f2c-bd7e-0dad530790b6
  spec:
    host: api-taller-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:58:08Z"
        status: "True"
        type: Admitted
      host: api-taller-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:44:29Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-5lghm
    namespace: 3scale
    resourceVersion: "94914015"
    uid: 42bc0b91-d909-40f0-bf1f-1f541c6efc8b
  spec:
    host: api-tallertest-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:44:29Z"
        status: "True"
        type: Admitted
      host: api-tallertest-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:50:48Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-5qmfq
    namespace: 3scale
    resourceVersion: "94917778"
    uid: aece1a80-14ad-4f76-b870-5fc91f2756f8
  spec:
    host: test3-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:50:48Z"
        status: "True"
        type: Admitted
      host: test3-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T20:55:56Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-9s9sf
    namespace: 3scale
    resourceVersion: "94920859"
    uid: 30ce0adb-d51c-46a2-b5cd-cbff8bd64e87
  spec:
    host: lre-product-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T20:55:56Z"
        status: "True"
        type: Admitted
      host: lre-product-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      3scale.net/gid: gid://zync/Entry/167
      zync.3scale.net/gid: gid://zync/Proxy/15
      zync.3scale.net/host: lre-services-stagging-qa.api.dirtrab.cl
    creationTimestamp: "2023-06-04T23:50:45Z"
    labels:
      3scale.net/created-by: zync
      3scale.net/service_id: "17"
      3scale.net/tenant_id: "2"
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
      zync.3scale.net/ingress: proxy
      zync.3scale.net/record: Z2lkOi8venluYy9Qcm94eS8xNQ
      zync.3scale.net/route-to: apicast-staging
    name: zync-3scale-api-hr898
    namespace: 3scale
    resourceVersion: "20279605"
    uid: fa551ad2-384b-4dfb-9eea-19867c26bfe9
  spec:
    host: lre-services-stagging-qa.api.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-04T23:50:45Z"
        message: a route in another namespace holds lre-services-stagging-qa.api.dirtrab.cl
          and is older than zync-3scale-api-hr898
        reason: HostAlreadyClaimed
        status: "False"
        type: Admitted
      host: lre-services-stagging-qa.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:01:19Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-htms5
    namespace: 3scale
    resourceVersion: "94924037"
    uid: 5afbf361-3c89-4ac9-85da-730714d157f7
  spec:
    host: api-tallertest-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:01:19Z"
        status: "True"
        type: Admitted
      host: api-tallertest-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:03:04Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-khbdb
    namespace: 3scale
    resourceVersion: "94925055"
    uid: b18167ce-c1fd-4916-9f57-b9f07af23f99
  spec:
    host: lre-product-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:03:04Z"
        status: "True"
        type: Admitted
      host: lre-product-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:05:41Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-lcq8h
    namespace: 3scale
    resourceVersion: "94926852"
    uid: 68a95589-e8fd-473b-9f62-5026a774b55d
  spec:
    host: midt-product-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:05:41Z"
        status: "True"
        type: Admitted
      host: midt-product-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:36:21Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-m9nmt
    namespace: 3scale
    resourceVersion: "94944665"
    uid: 9c183c34-f523-43f3-9db1-11223b75f3ad
  spec:
    host: test2-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:36:21Z"
        status: "True"
        type: Admitted
      host: test2-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:37:34Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-mhfjt
    namespace: 3scale
    resourceVersion: "94945276"
    uid: a9ae4563-3e18-4b4c-9e30-8ccb6e5424ab
  spec:
    host: test3-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:37:34Z"
        status: "True"
        type: Admitted
      host: test3-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:41:11Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-mnfr5
    namespace: 3scale
    resourceVersion: "94947301"
    uid: 486d49b4-cda6-40a2-bd6f-4bf3481dad9c
  spec:
    host: api-taller-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:41:11Z"
        status: "True"
        type: Admitted
      host: api-taller-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:42:23Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-swvv2
    namespace: 3scale
    resourceVersion: "94947976"
    uid: 63266a1b-0699-4ebd-8fb3-3c366d65d57e
  spec:
    host: api-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:42:23Z"
        status: "True"
        type: Admitted
      host: api-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:47:41Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-tlxgq
    namespace: 3scale
    resourceVersion: "94951136"
    uid: 2373d3ef-41a7-4c7e-8673-8281074a128c
  spec:
    host: api-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:47:41Z"
        status: "True"
        type: Admitted
      host: api-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:48:44Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: production
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-v5p52
    namespace: 3scale
    resourceVersion: "94951743"
    uid: 2d91bcc0-1939-43b6-84a3-274dd5122104
  spec:
    host: test1-3scale-apicast-production.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-production
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:48:44Z"
        status: "True"
        type: Admitted
      host: test1-3scale-apicast-production.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:49:54Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-vd658
    namespace: 3scale
    resourceVersion: "94952433"
    uid: e752c69d-648b-4845-9c8f-5bd860670bea
  spec:
    host: midt-product-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:49:54Z"
        status: "True"
        type: Admitted
      host: midt-product-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:51:19Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: apicast
      threescale_component_element: staging
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-api-zsm95
    namespace: 3scale
    resourceVersion: "94953197"
    uid: 066f05d6-0991-4192-9ba5-04d7b77c1ea2
  spec:
    host: test2-3scale-apicast-staging.api-cloud.dirtrab.cl
    port:
      targetPort: gateway
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:51:19Z"
        status: "True"
        type: Admitted
      host: test2-3scale-apicast-staging.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:54:14Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: master-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-master-dwftc
    namespace: 3scale
    resourceVersion: "94954813"
    uid: 7467312e-57ca-4ba2-9c4e-8c0fe26da893
  spec:
    host: master.api-cloud.dirtrab.cl
    port:
      targetPort: http
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: system-master
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:54:14Z"
        status: "True"
        type: Admitted
      host: master.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:55:16Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: provider-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-provider-8ffxr
    namespace: 3scale
    resourceVersion: "94955397"
    uid: af46db72-dc90-4af0-a252-651d28fb492b
  spec:
    host: 3scale-admin.api-cloud.dirtrab.cl
    port:
      targetPort: http
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: system-provider
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:55:16Z"
        status: "True"
        type: Admitted
      host: 3scale-admin.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:56:14Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: provider-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-provider-8ffxr-ocp4
    namespace: 3scale
    resourceVersion: "94956108"
    uid: 0ad72509-c964-4f28-8845-3119ff002671
  spec:
    host: 3scale-admin.apps.ocp4azu.dirtrab.cl
    port:
      targetPort: http
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: system-provider
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:56:14Z"
        status: "True"
        type: Admitted
      host: 3scale-admin.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:57:28Z"
    labels:
      app: 3scale-api-management
      migration.openshift.io/migrated-by-migmigration: d260e821-c8d9-409f-9013-a81dd35264d4
      migration.openshift.io/migrated-by-migplan: 49357516-407e-4d22-8a38-498daa6ef155
      threescale_component: system
      threescale_component_element: developer-ui
      velero.io/backup-name: migration-05da4-initial-s7jkt
      velero.io/restore-name: migration-05da4-final-h89cb
    name: zync-3scale-provider-tpqt8
    namespace: 3scale
    resourceVersion: "94956790"
    uid: 2b837555-2088-4b9e-9a86-4220e90c11fb
  spec:
    host: 3scale.api-cloud.dirtrab.cl
    port:
      targetPort: http
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: system-developer
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:57:28Z"
        status: "True"
        type: Admitted
      host: 3scale.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
